# rasterizer

./: .gitmodules  BuildPackages.bat  CLAUDE.md  CMakeLists.txt  CMakePresets.json  GenerateProjectFiles.bat  README.md
graphics/: CMakeLists.txt
graphics/inc/: SDL_ttf_context.hpp  aligned_unique_ptr.hpp  hash.hpp
graphics/inc/Graphics/: BlendMode.hpp  Buffer.hpp  Color.hpp  Enums.hpp  Font.hpp  Image.hpp  Rasterizer.hpp  RenderTarget.hpp  ResourceManager.hpp  Sprite.hpp  SpriteAnimation.hpp  SpriteSheet.hpp  Text.hpp  TileMap.hpp  Vertex.hpp  Window.hpp  WindowImpl.hpp
graphics/inc/graphics/: BlendMode.hpp  Buffer.hpp  Color.hpp  Enums.hpp  Font.hpp  Image.hpp  Rasterizer.hpp  Renderer.hpp  ResourceManager.hpp  SamplerState.hpp  Sprite.hpp  SpriteSheet.hpp  Task.hpp  Text.hpp  Texture.hpp  TileMap.hpp  Vertex.hpp  Window.hpp
graphics/src/: BlendMode.cpp  Color.cpp  Font.cpp  Image.cpp  PressStart2P.h  Rasterizer.cpp  Renderer.cpp  ResourceManager.cpp  SDL_ttf_context.cpp  SamplerState.cpp  Sprite.cpp  SpriteAnimation.cpp  SpriteSheet.cpp  Text.cpp  Texture.cpp  TileMap.cpp  Window.cpp  WindowImpl.hpp  stb_image_write.cpp  stb_truetype.cpp  tiny.inl
graphics/src/SDL3/: WindowSDL3.cpp  WindowSDL3.hpp
input/: CMakeLists.txt
input/inc/input/: ButtonState.hpp  GamePadStateTracker.hpp  Gamepad.hpp  Input.hpp  Keyboard.hpp  KeyboardStateTracker.hpp  Mouse.hpp  MouseStateTracker.hpp
input/src/: Gamepad.cpp  GamepadStateTracker.cpp  Input.cpp  Keyboard.cpp  KeyboardStateTracker.cpp  Mouse.cpp  MouseStateTracker.cpp
math/: CMakeLists.txt
math/inc/math/: AABB.hpp  Camera2D.hpp  Camera3D.hpp  Circle.hpp  Intrinsics.hpp  Line.hpp  Math.hpp  OutCodes.hpp  Plane.hpp  Rect.hpp  Space.hpp  Sphere.hpp  Transform2D.hpp  Viewport.hpp
math/src/: Camera2D.cpp  Camera3D.cpp  Math.cpp  Transform2D.cpp
samples/: .gitignore  CMakeLists.txt  imgui.ini
samples/00-Common/: CMakeLists.txt  resource.rc.in
samples/00-Common/inc/: Timer.hpp
samples/00-Common/src/: Timer.cpp
samples/01-ClearScreen/: CMakeLists.txt  main.cpp  resource.rc.in
samples/02-Images/: CMakeLists.txt  main.cpp
samples/03-Triangle/: CMakeLists.txt  main.cpp
samples/04-ImGui/: CMakeLists.txt  main.cpp
samples/05-Sprites/: CMakeLists.txt  main.cpp
samples/06-FillRules/: CMakeLists.txt  main.cpp
samples/07-TileMaps/: CMakeLists.txt  main.cpp
samples/08-Circles/: CMakeLists.txt  main.cpp
samples/09-EdgeFunction/: CMakeLists.txt  main.cpp
samples/10-Barycentric/: CMakeLists.txt  main.cpp
samples/11-AddressModes/: CMakeLists.txt  main.cpp
samples/12-Audio/: CMakeLists.txt  main.cpp
samples/13-Input/: CMakeLists.txt  main.cpp
samples/14-Pong/: CMakeLists.txt  main.cpp
samples/14-Pong/inc/: Ball.hpp  Game.hpp  GameState.hpp  Menu.hpp  MenuState.hpp  Paddle.hpp  Scores.hpp  Sound.hpp  State.hpp  StateBase.hpp
samples/14-Pong/src/: Ball.cpp  Game.cpp  GameState.cpp  Menu.cpp  MenuState.cpp  Paddle.cpp  Scores.cpp  Sound.cpp  StateBase.cpp
samples/15-PixelAdventure/: CMakeLists.txt  main.cpp
samples/15-PixelAdventure/inc/: Background.hpp  Box.hpp  Button.hpp  Character.hpp  Effect.hpp  Game.hpp  Level.hpp  Pickup.hpp  Player.hpp  Transition.hpp
samples/15-PixelAdventure/src/: Background.cpp  Box.cpp  Button.cpp  Character.cpp  Effect.cpp  Game.cpp  Level.cpp  Pickup.cpp  Player.cpp  Transition.cpp  main.cpp
samples/16-Arkanoid/: CMakeLists.txt
samples/16-Arkanoid/inc/: Ball.hpp  Brick.hpp  Bullet.hpp  Button.hpp  Field.hpp  Game.hpp  GameOverState.hpp  HighScoreState.hpp  IntroState.hpp  Level.hpp  ParseRects.hpp  Physics.hpp  PlayState.hpp  PowerUp.hpp  State.hpp  TitleState.hpp  Vaus.hpp
samples/16-Arkanoid/src/: Ball.cpp  Brick.cpp  Bullet.cpp  Button.cpp  Field.cpp  Game.cpp  GameOverState.cpp  HighScoreState.cpp  IntroState.cpp  Level.cpp  ParseRects.cpp  Physics.cpp  PlayState.cpp  PowerUp.cpp  TitleState.cpp  Vaus.cpp  main.cpp
samples/17-Physics/: Ball.cpp  Ball.hpp  CMakeLists.txt  main.cpp
samples/18-Culling/: CMakeLists.txt  main.cpp
samples/19-AABBOverlap/: CMakeLists.txt  main.cpp
samples/20-FontsAndText/: CMakeLists.txt  main.cpp
samples/20-Text/: CMakeLists.txt  main.cpp
samples/assets/Arkanoid/: into_lasers.aseprite  intro_explosion.aseprite  intro_ship.aseprite  intro_vaus.aseprite  ship.xml
samples/assets/Arkanoid/intro/: intro.aseprite  lasers.aseprite  ship.aseprite  ship.json  ship.xml  vaus.aseprite  vaus.json  vaus.psd  vaus.xml
samples/assets/fonts/pong-score/: license.txt  readme.txt
samples/assets/levels/: tilemap.ldtk
samples/assets/sounds/: sources.txt
tests/: CMakeLists.txt  ColorTests.cpp  README.md
